--- a/e6893_project/templates/stock.html
+++ b/e6893_project/templates/stock.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>{{ content1 }}</h1>
+
+        <!-- <h2>{{ content2 }} {{ content3 }}</h2> -->
+
         <!-- <iframe width="420" height="315"
         src="https://www.youtube.com/embed/tgbNymZ7vqY">
         </iframe> -->
