--- a/e6893_project/templates/welcome.html
+++ b/e6893_project/templates/welcome.html
@@ -10,22 +10,47 @@
         <h3>{{ content3 }}</h3>
         <p>{{ content4 }}</p>
 
-        <label for="stock">Choose a company:</label>
+        <!-- <label for="stock">Choose a company:</label>
             <select name="stock" id="stock">
+                <option disabled = "true" selected>-- Select a company --</option>
                 <option value="GOOG">Alphabet Inc.</option>
                 <option value="AMZN">Amazon.com Inc.</option>
                 <option value="AAPL">Apple Inc.</option>
                 <option value="FB">Meta Platforms, Inc.</option>
                 <option value="MSFT">Microsoft Corporation</option>
                 <option value="NFLX">Netflix, Inc.</option>
-            </select>
+            </select> -->
 
-            <!-- <form action="" method="post">{% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" value="Create" />
-            </form> -->
+        <form method = "POST" action = "{% url 'stock' %}" >
+            <label for="stock">Choose a company:</label>
+            <select name="stock" id="stock" action="post" id="mySelect" onChange="document.getElementById('selectedValue').innerHTML = this.value;">
+                <option disabled = "true" selected>-- Select a company --</option>
+                <option>Alphabet Inc. (GOOG)</option>
+                <option>Amazon.com Inc. (AMZN)</option>
+                <option>Apple Inc. (AAPL)</option>
+                <option>Meta Platforms, Inc. (FB)</option>
+                <option>Microsoft Corporation (MSFT)</option>
+                <option>Netflix, Inc. (NFLX)</option>
+            </select>  
+        </form>  
 
-            <button><a href="/stock">Go!</a></button>
+
+            
+            <h3>{{ content5 }} <p><span id="selectedValue"></span></p> </h3>
+            
+            <hr/>   
+            <p> Date: {{ date }} </p>
+            <p> Open: {{ open }} </p>
+            <p> High: {{ high }} </p>>
+            <p> Low: {{ low }} </p>
+            <p> Close: {{ close }} </p>
+            <p> Volume: {{ volume }} </p>
+            <hr/>
+                
+            <button><a href="/stock">Watch relevant YouTube videos!</a></button>
+
+
+            <button><a href="/stock">See trends on Twitter!</a></button>
 
 
             
