--- a/e6893_project/templates/twitter.html
+++ b/e6893_project/templates/twitter.html
@@ -2,15 +2,16 @@
 <html lang = 'en'>
     <head>
         <meta charset="UTF-8">
-        <title>Company information</title>
+        <title>Tweets and Sentiment Analysis</title>
     </head>
     <body>
         <h1>{{ content1 }}</h1>
+        <h1>{{ content2 }}</h1>
 
         <!-- <h2>{{ content2 }} {{ content3 }}</h2> -->
 
         <!-- <iframe width="420" height="315"
-        src="https://www.youtube.com/embed/tgbNymZ7vqY">
+        src="{{ url1 }}">
         </iframe> -->
     </body>
 </html>
