--- a/e6893_project/templates/welcome.html
+++ b/e6893_project/templates/welcome.html
@@ -41,7 +41,7 @@
             <hr/>   
             <p> Date: {{ date }} </p>
             <p> Open: {{ open }} </p>
-            <p> High: {{ high }} </p>>
+            <p> High: {{ high }} </p>
             <p> Low: {{ low }} </p>
             <p> Close: {{ close }} </p>
             <p> Volume: {{ volume }} </p>
