--- a/e6893_project/templates/twitter.html
+++ b/e6893_project/templates/twitter.html
@@ -6,8 +6,22 @@
     </head>
     <body>
         <h1>{{ content1 }}</h1>
-        <h1>{{ content2 }}</h1>
 
         
-    </body>
+</style>
+</head>
+<body>
+    <div class="main-panel">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="" style="font-weight: 400">Tweets Sentiment Analysis</a>
+          <a class="nav-link" href="{% url 'welcome'%}">Back to Main Page</a>
+        </div>
+      </nav>
+      </div>
+</body>
+
 </html>
+
+
+        
