--- a/e6893_project/templates/youtube.html
+++ b/e6893_project/templates/youtube.html
@@ -6,25 +6,29 @@
     </head>
     <body>
         <h1>{{ content1 }}</h1>
-        <p>{{ content2 }}</p>
+        <h2>{{ content2 }}</h2>
 
-        <p><a href="url"> {{ link0 }} </a></p>
-        <p><a href="url">{{ link1 }}</a></p>
-        <p><a href="url">{{ link2 }}</a></p>
-        <p><a href="url">{{ link3 }}</a></p>
-        <p><a href="url">{{ link4 }}</a></p>
-        <p><a href="url">{{ link5 }}</a></p>
-        <p><a href="url">{{ link6 }}</a></p>
-        <p><a href="url">{{ link7 }}</a></p>
-        <p><a href="url">{{ link8 }}</a></p>
-        <p><a href="url">{{ link9 }}</a></p>
+        <p> {{ link0 }} </p>
+        <p>{{ link1 }}</p>
+        <p>{{ link2 }}</p>
+        <p>{{ link3 }}</p>
+        <p>{{ link4 }}</p>
+        <p>{{ link5 }}</p>
+        <p>{{ link6 }}</p>
+        <p>{{ link7 }}</p>
+        <p>{{ link8 }}</p>
+        <p>{{ link9 }}</p>
 
         <hr/>
 
         <h1>{{ content3 }}</h1>
         <iframe width="560" height="315" src="{{ url0 }}" frameborder="0" allowfullscreen></iframe> 
 
+        <hr/>
+        
+        <button><a href="/twitter">See trends on Twitter!</a></button>
 
-        </iframe>
+
+
     </body>
 </html>
