--- a/e6893_project/templates/youtube.html
+++ b/e6893_project/templates/youtube.html
@@ -8,21 +8,21 @@
         <h1>{{ content1 }}</h1>
         <h2>{{ content2 }}</h2>
 
-        <p> {{ link0 }} </p>
-        <p>{{ link1 }}</p>
-        <p>{{ link2 }}</p>
-        <p>{{ link3 }}</p>
-        <p>{{ link4 }}</p>
-        <p>{{ link5 }}</p>
-        <p>{{ link6 }}</p>
-        <p>{{ link7 }}</p>
-        <p>{{ link8 }}</p>
-        <p>{{ link9 }}</p>
+        <p> {{ video0 }} <a href = "{{ url0 }}"> </a> </p>
+        <p>{{ video1 }} <a href = "{{ url1 }}"> </a> </p>
+        <p>{{ video2 }} <a href = "{{ url2 }}"> </a> </p>
+        <p>{{ video3 }} <a href = "{{ url3 }}"> </a> </p>
+        <p>{{ video4 }} <a href = "{{ url4 }}"> </a> </p>
+        <p>{{ video5 }} <a href = "{{ url5 }}"> </a> </p>
+        <p>{{ video6 }} <a href = "{{ url6 }}"> </a> </p>
+        <p>{{ video7 }} <a href = "{{ url7 }}"> </a> </p>
+        <p>{{ video8 }} <a href = "{{ url8 }}"> </a> </p>
+        <p>{{ video9 }} <a href = "{{ url9 }}"> </a> </p>
 
         <hr/>
 
         <h1>{{ content3 }}</h1>
-        <iframe width="560" height="315" src="{{ url0 }}" frameborder="0" allowfullscreen></iframe> 
+        <iframe width="560" height="315" src="{{ embed_url }}" frameborder="0" allowfullscreen></iframe> 
 
         <hr/>
         
